--- a/random-post.html
+++ b/random-post.html
@@ -19,7 +19,7 @@ body{background:#fff;color:#111;font-size:14px;font-weight:300;line-height:22px;
 }
 .related-post-style-3 .related-post-item:focus{outline:0}
 .related-post{margin:0;padding-top:10px;border-top:none;}
-.related-post h4{background: #f57c00;
+.related-post h4{background: #f80538;
     margin: 0 15px 10px 0;
     color: #fff;
     padding: 10px;
